# synthetic-edi-gen

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yaml  release.yaml
src/synthetic_edi_gen/: __init__.py  __main__.py  _base.py  basic_codes.py  claim_generator.py  edi_models.py  generate.py  helpers.py  openar_generator.py  payment_generator.py  reference_data.py
tests/: conftest.py  test_basic_codes.py  test_claim_generator.py  test_generate.py  test_helpers.py  test_openar_generator.py  test_payment_generator.py  test_reference_data.py
