[project]
name = "synthetic-edi-gen"
version = "0.2.1"
description = "Generate synthetic EDI 835/837 healthcare data for testing and demos"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cyclopts>=3.0",
    "openpyxl>=3.1",
    "pandas>=2.2",
    "pydantic>=2.0",
]

[project.scripts]
synthetic-edi-gen = "synthetic_edi_gen.__main__:main"

[dependency-groups]
dev = [
    "basedpyright>=1.37",
    "pre-commit>=4.0",
    "pytest>=8.0",
    "ruff>=0.15",
]

[build-system]
requires = ["uv_build>=0.10.2,<0.11.0"]
build-backend = "uv_build"

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "B",   # flake8-bugbear
    "I",   # isort
    "UP",  # pyupgrade
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
    "Q",   # flake8-quotes
    "W",   # pycodestyle warnings
    "S",   # bandit (security)
]

[tool.ruff.lint.isort]
known-first-party = ["synthetic_edi_gen"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"test_*" = ["S101", "S105", "S106", "E501"]
"edi_models.py" = ["E501"]

[tool.basedpyright]
include = ["src"]
ignore = [".venv", "**/__pycache__"]
reportExplicitAny = false
reportMissingTypeArgument = false
reportMissingTypeStubs = false
reportUnusedCallResult = false
reportUnknownVariableType = false
reportUnknownArgumentType = false
reportUnknownMemberType = false
reportAny = false
reportImplicitStringConcatenation = false
reportUnannotatedClassAttribute = false
reportPrivateUsage = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
